--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
   <!-- الفوتر -->
   <footer>
     جميع الحقوق محفوظة © 971 Family<br>
-    Dev BinZayed
+    Dev 971
   </footer>
 
   <script src="script.js"></script>
