--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 
   <!-- اللوقو -->
   <div class="center-logo">
-    <img src="raw.png" alt="971 Family Logo">
+    <img src="https://media.discordapp.net/attachments/1409009249732001795/1414418406672830525/raw.png?ex=68bf7f4a&is=68be2dca&hm=3041a34107ec5b99c35e66a79efdea7c7261bbbb71c65105867f215f936896aa&=&format=webp&quality=lossless&width=350&height=350" alt="971 Family Logo">
   </div>
 
   <!-- رابط ديسكورد -->
